force-app/main/default/objects/Contact/fields/Breakfast_seminars_executive__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_seminars_executive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seminars (executive)</label>
    <type>Checkbox</type>
</CustomField>