force-app/main/default/objects/Contact/fields/Breakfast_seminars_middle_management__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_seminars_middle_management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seminars (middle management)</label>
    <type>Checkbox</type>
</CustomField>