force-app/main/default/objects/Contact/fields/Breakfast_seminars_technical__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_seminars_technical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seminars (technical)</label>
    <type>Checkbox</type>
</CustomField>