force-app/main/default/objects/Contact/fields/Business_Relation_to_Sopra_Steria__c.field-meta.xml
<CustomField>
    <fullName>Business_Relation_to_Sopra_Steria__c</fullName>
    <inlineHelpText>•Promotes us: Willing to promote 2S internally
•Indifferent: Friendly but not willing to promote
•Promotes competition: Actively promotes competitors</inlineHelpText>
    <label>Business Relation to Sopra Steria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotes us</fullName>
            </value>
            <value>
                <fullName>Indifferent</fullName>
            </value>
            <value>
                <fullName>Promotes competition</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>