force-app/main/default/objects/Contact/fields/Consent_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Consent_Newsletter__c</fullName>
    <description>This picklist field is used in Account Engagement Sweden to make sure users have the ability to show consent or not to newsletters.</description>
    <label>Consent Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>