force-app/main/default/objects/Contact/fields/Date_Performed_by__c.field-meta.xml
<CustomField>
    <fullName>Date_Performed_by__c</fullName>
    <label>Date &amp; Performed by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>