force-app/main/default/objects/Contact/fields/Event_Invitations__c.field-meta.xml
<CustomField>
    <fullName>Event_Invitations__c</fullName>
    <description>This picklist field is used in Account Engagement Sweden where customers have the ability to show consent or not to event invitations.</description>
    <label>Event Invitations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>