force-app/main/default/objects/Contact/fields/Have_Called__c.field-meta.xml
<CustomField>
    <fullName>Have_Called__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used for Sales people to know who to call and not.</description>
    <label>Have Called</label>
    <type>Checkbox</type>
</CustomField>