force-app/main/default/objects/Contact/fields/Have_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Have_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Emailed</label>
    <type>Checkbox</type>
</CustomField>