force-app/main/default/objects/Contact/fields/KCRM_Owner_name__c.field-meta.xml
<CustomField>
    <fullName>KCRM_Owner_name__c</fullName>
    <label>KCRM Owner name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>