force-app/main/default/objects/Contact/fields/Legitimate_Interest__c.field-meta.xml
<CustomField>
    <fullName>Legitimate_Interest__c</fullName>
    <description>If true, Sopra Steria can send marketing emails with reference to legitimate interestg</description>
    <formula>IF( Account.Blocked__c = True, False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If true, Sopra Steria can send marketing emails with reference to legitimate interestg</inlineHelpText>
    <label>Legitimate Interest</label>
    <type>Checkbox</type>
</CustomField>