force-app/main/default/objects/Contact/fields/Major_Incident_Contact__c.field-meta.xml
<CustomField>
    <fullName>Major_Incident_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tag the contact as recipient of information related to critical incidents. At least one contact should be tagged for all active accounts.</inlineHelpText>
    <label>Major Incident Contact</label>
    <type>Checkbox</type>
</CustomField>