force-app/main/default/objects/Contact/fields/Marked_for_redaction__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_redaction__c</fullName>
    <description>Displays the date the record was marked for redaction</description>
    <label>Marked for redaction</label>
    <type>Date</type>
</CustomField>