force-app/main/default/objects/Contact/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>