force-app/main/default/objects/Contact/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>50</length>
    <type>Text</type>
</CustomField>