force-app/main/default/objects/Contact/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPS</label>
    <type>Checkbox</type>
</CustomField>