force-app/main/default/objects/Contact/fields/Opt_In_Contact_DK__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Contact_DK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt in for marketing activities. Valid for Denmark only</description>
    <label>Opt In Contact DK</label>
    <type>Checkbox</type>
</CustomField>