force-app/main/default/objects/Contact/fields/OwnedBy_User__c.field-meta.xml
<CustomField>
    <fullName>OwnedBy_User__c</fullName>
    <description>Used to filter only my Contacts</description>
    <formula>IF(OwnerId = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnedBy$User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>