force-app/main/default/objects/Contact/fields/Partnerevents__c.field-meta.xml
<CustomField>
    <fullName>Partnerevents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partnerevents</label>
    <type>Checkbox</type>
</CustomField>