force-app/main/default/objects/Contact/fields/Permission_to_share_contact_info__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_share_contact_info__c</fullName>
    <description>Used for managing permissions on sharing contact info between event attendees</description>
    <label>Permission to share contact info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>