force-app/main/default/objects/Contact/fields/Power_of_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Sharing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Power of Sharing</label>
    <type>Checkbox</type>
</CustomField>