force-app/main/default/objects/Contact/fields/RightCloud__c.field-meta.xml
<CustomField>
    <fullName>RightCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Info</description>
    <label>RightCloud</label>
    <type>Checkbox</type>
</CustomField>