force-app/main/default/objects/Contact/fields/RightExperience__c.field-meta.xml
<CustomField>
    <fullName>RightExperience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing info</description>
    <label>RightExperience</label>
    <type>Checkbox</type>
</CustomField>