force-app/main/default/objects/Contact/fields/RightSecurity__c.field-meta.xml
<CustomField>
    <fullName>RightSecurity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Info</description>
    <label>RightSecurity</label>
    <type>Checkbox</type>
</CustomField>