force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chairman / Board member</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CXO - part of the CEO´s management team</fullName>
            </value>
            <value>
                <fullName>Middle management</fullName>
                <label>Intermediate manager / Middle management</label>
            </value>
            <value>
                <fullName>Specialist Advisor</fullName>
                <label>Specialist/Advisor</label>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Subject specialist</fullName>
                <isActive>false</isActive>
                <label>Subject specialist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>