force-app/main/default/objects/Contact/fields/Scale_up__c.field-meta.xml
<CustomField>
    <fullName>Scale_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scale up</label>
    <type>Checkbox</type>
</CustomField>