force-app/main/default/objects/Contact/fields/SCC__c.field-meta.xml
<CustomField>
    <fullName>SCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scandinavian Customer Community (SCC)</label>
    <type>Checkbox</type>
</CustomField>