force-app/main/default/objects/Contact/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Shows the value from the Sector field on the Account related to a Contact</description>
    <formula>TEXT( Account.Ownership )</formula>
    <label>Sector</label>
    <type>Text</type>
</CustomField>