force-app/main/default/objects/Contact/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <description>A field to track information when adding information to a form (Contact).</description>
    <label>Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>