force-app/main/default/objects/Contact/fields/Sopra_Steria_Akademiet__c.field-meta.xml
<CustomField>
    <fullName>Sopra_Steria_Akademiet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This contact is interested in or have attended a Sopra Steria Akademiet session.</description>
    <label>Sopra Steria Akademiet</label>
    <type>Checkbox</type>
</CustomField>