force-app/main/default/objects/Contact/fields/Stakeholder_Role__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Role__c</fullName>
    <description>This contacts role in the company in general</description>
    <label>Stakeholder Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>