force-app/main/default/objects/Contact/fields/View_on_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>View_on_LinkedIn__c</fullName>
    <inlineHelpText>URL to this Contact&apos;s account on LinkedIn</inlineHelpText>
    <label>View on LinkedIn</label>
    <type>Url</type>
</CustomField>