force-app/main/default/objects/Contact/fields/Visitor_ID__c.field-meta.xml
<CustomField>
    <fullName>Visitor_ID__c</fullName>
    <description>A field to track information about a visitor when adding information in a form (Contact).</description>
    <label>Visitor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>