force-app/main/default/objects/Contact/listViews/All_Contacts_NO.listView-meta.xml
<ListView>
    <fullName>All_Contacts_NO</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <label>All Contacts_NO</label>
</ListView>