force-app/main/default/objects/Contact/listViews/All_Contacts_SE.listView-meta.xml
<ListView>
    <fullName>All_Contacts_SE</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Name__c</field>
        <operation>equals</operation>
        <value>Testföretaget AB</value>
    </filters>
    <label>All Contacts_SE</label>
</ListView>