force-app/main/default/objects/Contact/listViews/Contacts_NO_Roles.listView-meta.xml
<ListView>
    <fullName>Contacts_NO_Roles</fullName>
    <columns>FULL_NAME</columns>
    <columns>Role__c</columns>
    <columns>Relevant_topics__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Norway</value>
    </filters>
    <filters>
        <field>CONTACT.DO_NOT_CALL</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Contacts_NO Roles</label>
</ListView>