force-app/main/default/objects/Contact/listViews/Julias_contacts.listView-meta.xml
<ListView>
    <fullName>Julias_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>Julias contacts</label>
</ListView>