force-app/main/default/objects/Contact/listViews/Region_Stavanger.listView-meta.xml
<ListView>
    <fullName>Region_Stavanger</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Stavanger</value>
    </filters>
    <label>Region Stavanger</label>
</ListView>