force-app/main/default/objects/Contact/listViews/SE_Ringlista.listView-meta.xml
<ListView>
    <fullName>SE_Ringlista</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Have_Called__c</columns>
    <filterScope>Mine</filterScope>
    <label>SE Ringlista</label>
</ListView>